@@ -1,4 +1,6 @@
 4.6.3:
+  * Regression: bug when creating a transaction and its
+    parent is explicitly set to 'None'.
   * Regression: bug when duplicationg cursors. Solved.
   * Provide "dbenv.txn_recover()" and "txn.discard()", for fully
     support recovery of distributed transactions.
